--- a/package.json
+++ b/package.json
@@ -39,5 +39,13 @@
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
-  }
+  },
+
+  "nodemonConfig": {
+   "watch": ["src"],
+   "ext": "ts,json",
+   "ignore": ["tokens/*", "node_modules"]
+ }
+ 
+ 
 }
